syntax = "proto3";

option csharp_namespace = "EmployeeContracts";

service WorkerIntegration {
	rpc GetWorkerStream (EmptyMessage) returns (stream WorkerAction);
	rpc GetWorkers (EmptyMessage) returns (GetWorkersResponse);	
	rpc AddWorker (WorkerMessage) returns (EmptyMessage);
	rpc UpdateWorker (WorkerMessage) returns (EmptyMessage);
	rpc DeleteWorker (WorkerIdMessage) returns (EmptyMessage);
}

message EmptyMessage
{
}

message WorkerAction
{
	WorkerMessage worker = 1;
	Action actionType = 2;
}

message WorkerMessage
{
	string LastName = 1;
	string FirstName = 2;
	string MiddleName = 3;
	int64 Birthday = 4;
	Sex Sex = 5;
	bool HasChildren = 6;
	int32 Id = 7;
}

message GetWorkersResponse 
{
	repeated WorkerMessage Workers = 1;
}

message WorkerIdMessage {
    int32 Id = 1;
}

//Пол
enum Sex {
	SexDefault = 0;
	Male = 1;
	Female = 2;
}

enum Action {
	ActionDefault = 0;
	Create = 1;
	Update = 2;
	Delete = 3;
}